# autonomous-code-archaeology

./: .gitignore  LICENSE  README.md  WEB_README.md  WEB_UI_GUIDE.md  app.py  pyproject.toml  requirements-ui.txt  setup.py
archaeology/: README.md  __init__.py  analyzer.py  cli.py  debt_assessor.py  demo.py  historian.py  models.py  orchestrator.py  reporter.py
